[package]
name = "g0djan-github-io"
version = "0.1.0"
authors = ["Georgii Rylov <g0dj4n@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/g0djan/g0djan.github.io"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
